# autogoal-remote

./: .gitignore  __init__.py  algorithm.py  pyproject.toml  readme.md  server.py
autogoal-remote/: __init__.py
autogoal-remote/distributed/: __init__.py  algorithm.py  server.py
autogoal-remote/distributed/config/: __init__.py
autogoal-remote/production/: server.py
autogoal_remote/: __init__.py  cli.py
autogoal_remote/distributed/: __init__.py  algorithm.py  client.py  proxy.py  remote_algorithm.py  server.py  utils.py
autogoal_remote/distributed/config/: __init__.py  connections.yml
autogoal_remote/production/: __init__.py  client.py  server.py
distributed/: client.py
